adicion de controlador base para filtromixto #5
