# swagger/swagger.json
@@ -55,6 +55,64 @@
                 }
             }
         },
+        "/filtroMixto/": {
+            "get": {
+                "tags": [
+                    "filtroMixto"
+                ],
+                "description": "get Filtromixto",
+                "operationId": "FiltromixtoController.GetAll",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Filtromixto"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/filtroProveedor/": {
             "get": {
                 "tags": [
@@ -89,6 +147,12 @@
             }
         }
     },
+    "definitions": {
+        "models.Filtromixto": {
+            "title": "Filtromixto",
+            "type": "object"
+        }
+    },
     "tags": [
         {
             "name": "filtroContrato",
@@ -97,6 +161,10 @@
         {
             "name": "filtroProveedor",
             "description": "ContratosProveedorController ... Filtro para tener lista de contratos de un proveedor\n"
+        },
+        {
+            "name": "filtroMixto",
+            "description": "FiltromixtoController operations for Filtromixto\n"
         }
     ]
 }
